# convex-hull

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/: DESIGN.md
src/convex_full/: __init__.py  algorithm.py  constants.py  degenerates.py  geometry.py  linked_list.py  normalize.py  pivot.py  polar.py  prune.py  types.py  visualize.py
src/convex_full/cli/: __init__.py  plot_convex_hull.py
src/convex_hull/: __init__.py  algorithm.py  constants.py  degenerates.py  geometry.py  normalize.py  pivot.py  polar.py  prune.py  validation.py  visualize.py
src/convex_hull/cli/: plot_convex_hull.py
tests/: test_acceptance.py  test_algorithm.py  test_cli_plot_convex_hull.py  test_degenerates.py  test_geometry.py  test_linked_list.py  test_normalize.py  test_pivot.py  test_polar.py  test_project_layout.py  test_prune.py  test_types.py  test_visualize.py
