[project]
name = "convex-hull"
version = "0.1.0"
description = "Convex hull library implementation based on the Graham paper plan"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
convex-hull-plot = "convex_hull.cli.plot_convex_hull:main"

[dependency-groups]
dev = [
    "matplotlib>=3.10.9",
    "pytest>=9.0.3",
]
ci = [
    "mypy==1.20.2",
    "ruff==0.15.11",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/convex_hull"]
