[project]
name = "convex-hull"
description = "Convex hull library implementation based on the Graham paper plan"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []
dynamic = ["version"]

[project.scripts]
convex-hull-plot = "convex_hull.cli.plot_convex_hull:main"

[project.optional-dependencies]
plot = [
    "matplotlib>=3.10.9",
]

[dependency-groups]
dev = [
    "matplotlib>=3.10.9",
    "pytest>=9.0.3",
]
ci = [
    "mypy==1.20.2",
    "ruff==0.15.11",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/convex_hull"]

[tool.hatch.version]
path = "src/convex_hull/_version.py"
